asm_tests/other_testfiles/invalid_files/error15.s
.name "MORO"
.comment "MORJESTA!"

sti r1, %42, #r3
